# citadel-browser

./: .cursorrules  .gitignore  ALPHA_RELEASE_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.fuzz  EXAMPLES.md  FORM_IMPLEMENTATION.md  FUZZING.md  JAVASCRIPT_SECURITY_IMPLEMENTATION.md  LICENSE  MEMORY_PROTECTION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_4_STEP_7_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  RESOURCE_LOADING_IMPLEMENTATION.md  ROADMAP.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_COMPLETION_REPORT.md  SECURITY_VALIDATION_REPORT.md  SECURITY_VALIDATION_SUMMARY.md  TODO.md  TRACKER_BLOCKING_IMPLEMENTATION.md  UI_DESIGN.md  VIEWPORT_IMPLEMENTATION.md  analysis_display_pipeline.md  build_output.txt  deny.toml  form_test.html  fuzz.sh  test.html  test_content_display.rs  test_content_extraction.rs  test_content_pipeline.rs  (+5 more)
.cargo/: config.toml
.github/workflows/: ci.yml  fuzzing.yml
crates/antifingerprint/: Cargo.toml
crates/antifingerprint/src/: audio.rs  behavioral.rs  canvas.rs  font.rs  hardware.rs  lib.rs  metrics.rs  navigator.rs  webgl.rs
crates/antifingerprint/tests/: basic_security_test.rs  fingerprinting_script_tests.rs  real_world_protection.rs  security_tests.rs  security_validation.rs  security_validation_fixed.rs
crates/browser/: Cargo.toml
crates/browser/src/: app.rs  bookmarks.rs  downloads.rs  engine.rs  history.rs  lib.rs  main.rs  memory_manager.rs  memory_protection.rs  performance.rs  performance_benchmark.rs  performance_dashboard.rs  performance_integrator.rs  render_optimizer.rs  renderer.rs  renderer_backup.rs  resource_loader.rs  settings.rs  settings_panel.rs  tabs.rs  theme.rs  ui.rs  ui_demo.rs  ui_modern.rs  zkvm_receiver.rs
crates/browser/src/tests/: performance_integration_test.rs
crates/networking/: Cargo.toml  README.md
crates/networking/examples/: comprehensive_demo.rs  fetch_html.rs  resource_loading_demo.rs  tracker_blocking_demo.rs
crates/networking/src/: advanced_loader.rs  cache.rs  connection.rs  dns.rs  error.rs  http.rs  integrity.rs  lib.rs  network_optimizer.rs  network_security.rs  performance.rs  privacy_engine.rs  request.rs  resource.rs  resource_discovery.rs  resource_loader.rs  resource_manager.rs  response.rs  tracker_blocking.rs
crates/networking/tests/: dns_integration_tests.rs  https_client.rs  integration_tests.rs  resource_manager_tests.rs  security_tests.rs
crates/parser/: Cargo.toml  test_css_rendering.html
crates/parser/benches/: parser_benchmarks.rs
crates/parser/examples/: boa_spike.rs  rendering_audit.rs
crates/parser/src/: config.rs  css.rs  css_processor.rs  css_security.rs  cssom.rs  error.rs  layout.rs  layout_simple.rs  lib.rs  memory_limits.rs  metrics.rs  security.rs  servo_css_processor.rs  test_extraction.rs  tokenizer.rs
crates/parser/src/dom/: error.rs  metrics.rs  mod.rs  node.rs
crates/parser/src/html/: converter.rs  mod.rs  tree_sink.rs
crates/parser/src/js/: README.md  bindings.rs  dom_bindings.rs  dom_bindings_broken.rs.bak  dom_bindings_complex.rs.bak  engine.rs  mod.rs  security.rs  security_readme.md
crates/parser/tests/: security_tests.rs  test_servo_css_integration.rs
crates/security/: Cargo.toml
crates/security/src/: content_security.rs  context.rs  error.rs  lib.rs  memory.rs  privacy.rs
crates/security/tests/: security_tests.rs
crates/tabs/: Cargo.toml
crates/tabs/examples/: render_example_com.rs
crates/tabs/src/: lib.rs  persistence.rs  search.rs  search_worker.rs  send_safe_tab_manager.rs  ui.rs  zkvm_renderer.rs
crates/tabs/tests/: security_tests.rs  zkvm_isolation_proof.rs  zkvm_render_example_com.rs
crates/zkvm/: Cargo.toml
crates/zkvm/src/: channel.rs  error.rs  executor.rs  lib.rs
docs/: DEPENDENCY_BUDGET.md  README.md  ZKVM_THREAT_MODEL.md
docs/development/: CONTRIBUTING.md  FUZZING.md
docs/releases/: ALPHA_RELEASE_NOTES.md  CHANGELOG.md
examples/: full_pipeline_test.rs  html_parse_test.rs  pipeline_test.rs  real_html_test.rs  security_demo.rs
fuzz/: Cargo.toml  Dockerfile  README.md  build.rs
fuzz/dictionaries/: anti_fingerprinting.dict  csp_bypass.dict  css.dict  dns.dict  html.dict  js_sandbox_escape.dict  metrics.dict  network.dict  network_security.dict  privacy_protection.dict  search.dict
fuzz/fuzz_targets/: anti_fingerprinting_bypass.rs  csp_fuzzer.rs  csp_policy_bypass.rs  css_parser.rs  dns_resolver.rs  html_parser.rs  js_parser.rs  js_sandbox_escape.rs  memory_safety_fuzzer.rs  network_boundary_fuzzer.rs  network_request.rs  parser_metrics.rs  privacy_protection_fuzzer.rs  search_worker.rs  security_campaign_runner.rs  security_comprehensive.rs  tab_persistence.rs  url_parser.rs
fuzz/scripts/: generate_corpus.sh  run_all_fuzzers.sh  run_docker_fuzz.sh  run_fuzzing.sh  run_security_campaign.sh
fuzz/src/: lib.rs
scripts/: check_license_headers.sh
tests/: comprehensive_security_integration.rs  comprehensive_security_tests.rs  integration_tests.rs  memory_protection_tests.rs  rendering_targets.txt  security_tests.rs  website_compatibility_tests.rs
