[workspace]
resolver = "2"
members = [
    "crates/networking",
    "crates/parser",
    "crates/security",
    "crates/antifingerprint",
    "crates/tabs",
    "crates/zkvm",
    "crates/browser",
    "fuzz",
]

[workspace.package]
edition = "2021"
version = "0.0.1-alpha"
authors = ["geeknik <b@deepforkcyber.com>"]
repository = "https://github.com/geeknik/citadel-browser"
license = "MIT"
description = "A secure-by-design, privacy-first browser built from scratch in Rust. Citadel Browser puts user agency first with zero-knowledge architecture, anti-fingerprinting, and a security-focused rendering engine."
homepage = "https://deepforkcyber.com"
readme = "README.md"
keywords = ["privacy", "security", "browser", "macos", "anti-fingerprinting"]
categories = ["gui", "web-programming", "privacy", "security-tools"]

[workspace.dependencies]
# Core dependencies
bytes               = "1.5.0"
tokio               = { version = "1.36.0", features = ["full"] }
rustls              = "0.21.10"
rustls-native-certs = "0.6.3"
hyper-rustls        = { version = "0.24.2", features = ["http2"] }
trust-dns-resolver  = "0.23.2"
reqwest             = { version = "0.11.24", features = ["json"] }
futures             = "0.3.30"
thiserror           = "1.0.56"
log                 = "0.4.20"
rand                = "0.8.5"
serde               = { version = "1.0.197", features = ["derive"] }
serde_json          = "1.0.114"
url                 = "2.5.0"

# macOS specific dependencies
core-foundation     = "0.9.4"
core-graphics       = "0.23.1"
objc                = "0.2.7"
cocoa               = "0.25.0"
metal               = "0.25.0"
objc-foundation     = "0.1.1"

# UI dependencies
iced                = { version = "0.12", features = ["canvas", "image", "svg", "tokio"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"




