[package]
name = "citadel-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
citadel-networking = { path = "../crates/networking" }
citadel-parser = { path = "../crates/parser" }
citadel-security = { path = "../crates/security" }
citadel-tabs = { path = "../crates/tabs" }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
url = "2.5.4"
rand = "0.8.5"
serde_json = "1.0.114"

[build-dependencies]
arbitrary = { version = "1", features = ["derive"] }

# Remove the workspace section since this is part of the main workspace

# Add a lib target to satisfy Cargo
[lib]
name = "citadel_fuzz"
path = "src/lib.rs"
