[package]
name = "citadel-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "citadel"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
citadel-networking = { path = "../networking" }
citadel-parser = { path = "../parser" }
citadel-security = { path = "../security" }
citadel-antifingerprint = { path = "../antifingerprint" }
citadel-tabs = { path = "../tabs" }

# Core dependencies
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
uuid = "1.6.1"
env_logger = "0.10.1"

# UI dependencies
iced = { workspace = true, optional = true }

# macOS specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
core-graphics = { workspace = true }
objc = { workspace = true }
cocoa = { workspace = true }
metal = { workspace = true }
objc-foundation = { workspace = true }

[features]
default = ["ui"]
ui = ["iced"]
headless = []