[package]
name = "citadel-browser"
version = "0.2.0-alpha"
edition = "2021"
authors = ["Citadel Browser Team"]
description = "Privacy-first web browser with ZKVM tab isolation"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"

# Async runtime for network operations
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# JSON parsing (for API responses)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.4"
urlencoding = "2.1"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# UI framework
iced = { version = "0.12", features = ["image", "svg", "canvas", "tokio", "advanced"] }

# Layout engine
taffy = "0.3"

# Async trait support
async-trait = "0.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
dirs = "5.0"

# Internal crates
citadel-networking = { path = "../networking" }
citadel-parser = { path = "../parser" }
citadel-security = { path = "../security" }
citadel-tabs = { path = "../tabs" }
citadel-zkvm = { path = "../zkvm" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

# Development features
dev = ["tokio/tracing"]