[package]
name = "citadel-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Privacy-preserving networking components for the Citadel browser engine"
repository = "https://github.com/citadel-browser/citadel-browser-rust"
license = "MIT"

[dependencies]
tokio = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
hyper-rustls = { workspace = true }
hickory-resolver = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# Examples dependencies
env_logger = "0.10"

[[example]]
name = "fetch_html"
path = "examples/fetch_html.rs"

[[example]]
name = "resource_loading_demo"
path = "examples/resource_loading_demo.rs"