[package]
name = "citadel-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Privacy-preserving networking components for the Citadel browser engine"
repository = "https://github.com/citadel-browser/citadel-browser-rust"
license = "MIT"

[dependencies]
tokio = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
hyper-rustls = { workspace = true }
hickory-resolver = { workspace = true }
reqwest = { workspace = true }
# Minimal in-house HTTPS client (Tier-2 dep cut): current rustls 0.23 stack +
# bundled Mozilla roots. Replaces reqwest/hyper for page fetches. Use the `ring`
# crypto provider (no aws-lc-sys / cmake native build).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = "0.26"
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
citadel-security = { path = "../security" }

# Examples dependencies
env_logger = "0.10"

[[example]]
name = "fetch_html"
path = "examples/fetch_html.rs"

[[example]]
name = "resource_loading_demo"
path = "examples/resource_loading_demo.rs"

[[example]]
name = "tracker_blocking_demo"
path = "examples/tracker_blocking_demo.rs" 
