[package]
name = "citadel-parser"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "HTML/CSS parser for the Citadel Browser Engine"
repository = "https://github.com/citadel-browser/citadel-browser-rust"
license = { workspace = true }

[dependencies]
# Core parsing dependencies
html5ever = "0.27.0"  # Updated to latest version
cssparser = "0.34"    # CSS parsing - updated to latest
selectors = "0.26"    # CSS selector matching - updated
markup5ever = "0.12"  # Shared types between html5ever and xml5ever
string_cache = "0.8"  # String interning for efficient DOM operations
lazy_static = "1.4"   # For static resources
regex = "1.10"        # Regular expressions for security pattern matching

# Servo-compatible HTML parser with proper TreeSink implementation
kuchiki = "0.8"       # HTML/XML tree manipulation library based on html5ever

# Servo rendering components (macOS optimized) - simplified approach
taffy = "0.5"             # Modern layout engine (Servo's layout 2020)
euclid = "0.22"           # Geometric primitives for rendering
app_units = "0.7"         # Application units for measurements

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Async support
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Security & sanitization
ammonia = "3.3"  # HTML sanitization

# JavaScript engine
rquickjs = { version = "0.4", features = ["array-buffer", "bindgen", "classes", "futures", "loader"] }

# Logging and metrics
tracing = "0.1"

# Testing
criterion = { version = "0.5", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# URL handling
url = { workspace = true }

# Citadel crates
# citadel-networking = { path = "../networking" }  # Temporarily disabled

# Local dependency on the security crate
citadel-security = { path = "../security" }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"

[[example]]
name = "html_parse_test"
path = "../../examples/html_parse_test.rs"

[[example]]
name = "full_pipeline_test"
path = "../../examples/full_pipeline_test.rs"

[[example]]
name = "real_html_test"
path = "../../examples/real_html_test.rs"

[features]
default = []
benchmarks = ["criterion"]

[[bench]]
name = "parser_benchmarks"
harness = false
required-features = ["benchmarks"]