[package]
name = "citadel-security"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Security context and policy enforcement for Citadel Browser Engine"
repository = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.9"
base64 = "0.21"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"