[package]
name = "citadel-tabs"
version.workspace = true
edition = "2021"
description = "Privacy-focused tab management for Citadel Browser"
license = "MIT"

[dependencies]
# Internal dependencies
citadel-zkvm = { path = "../zkvm" }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
parking_lot = "0.12"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# UI and state management
iced = { version = "0.9", features = ["tokio", "debug"] }
iced_native = "0.10"

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.3" 